<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".FragmentTwo">


    <TextView
        android:id="@+id/tvKmPerLiter6"
        android:layout_width="60dp"
        android:layout_height="17dp"
        android:layout_marginTop="32dp"
        android:hint="@string/Kilometer_Per_Liter"
        android:text="@string/Gas_Station"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@+id/tvKmPerLiter2"
        app:layout_constraintTop_toBottomOf="@+id/tvKmPerLiter2" />

    <TextView
        android:id="@+id/tvKmPerLiter9"
        android:layout_width="60dp"
        android:layout_height="17dp"
        android:layout_marginTop="32dp"
        android:hint="@string/Kilometer_Per_Liter"
        android:text="@string/Branch"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@+id/tvKmPerLiter6"
        app:layout_constraintTop_toBottomOf="@+id/tvKmPerLiter6" />

    <TextView
        android:id="@+id/tvKmPerLiter7"
        android:layout_width="46dp"
        android:layout_height="16dp"
        android:layout_marginStart="12dp"
        android:hint="@string/Kilometer_Per_Liter"
        android:text="@string/Gas_Type"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="10sp"
        app:layout_constraintStart_toEndOf="@+id/etGasStation"
        app:layout_constraintTop_toTopOf="@+id/tvKmPerLiter6" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/Blue"
        android:text="Save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etBranch" />

    <EditText
        android:id="@+id/etGasStation"
        android:layout_width="130dp"
        android:layout_height="35dp"
        android:layout_marginStart="5dp"
        android:background="@color/light_yellow"
        android:ems="10"
        android:hint="@string/Gas_Station"
        android:inputType="text"
        android:paddingTop="12dp"
        android:textAlignment="textStart"
        android:textColorHint="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvKmPerLiter6"
        app:layout_constraintStart_toEndOf="@+id/tvKmPerLiter6" />

    <EditText
        android:id="@+id/etBranch"
        android:layout_width="324dp"
        android:layout_height="35dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:background="@color/light_yellow"
        android:ems="10"
        android:hint="@string/Branch"
        android:inputType="text"
        android:paddingTop="12dp"
        android:text="Branch"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textColorHint="@color/Red"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvKmPerLiter9"
        app:layout_constraintStart_toEndOf="@+id/tvKmPerLiter9"
        app:layout_constraintTop_toBottomOf="@+id/tvKmPerLiter7"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tvTotalAmount"
        android:layout_width="66dp"
        android:layout_height="18dp"
        android:layout_marginStart="26dp"
        android:hint="@string/Total_Amount"
        android:text="Total Amount"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="10sp"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/tvKmPerLiter" />

    <EditText
        android:id="@+id/etMillage"
        android:layout_width="80dp"
        android:layout_height="35dp"
        android:layout_marginStart="4dp"
        android:background="@color/light_yellow"
        android:ems="10"
        android:hint="@string/Millage"
        android:inputType="text"
        android:paddingTop="18dp"
        android:textAlignment="textStart"
        android:textColorHint="@color/black"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvKmPerLiter2"
        app:layout_constraintStart_toEndOf="@+id/tvKmPerLiter2" />

    <Button
        android:id="@+id/btnView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:backgroundTint="@color/Blue"
        android:text="View"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.154"
        app:layout_constraintStart_toEndOf="@+id/btnSave"
        app:layout_constraintTop_toTopOf="@+id/btnSave" />

    <EditText
        android:id="@+id/etPricePerLiter"
        android:layout_width="80dp"
        android:layout_height="35dp"
        android:layout_marginStart="4dp"
        android:background="@color/light_yellow"
        android:ems="10"
        android:hint="@string/Price_Per_Liter"
        android:inputType="text"
        android:paddingTop="18dp"
        android:textAlignment="textStart"
        android:textColorHint="@color/black"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvKmPerLiter3"
        app:layout_constraintStart_toEndOf="@+id/tvKmPerLiter3" />

    <EditText
        android:id="@+id/etNumberOfLiter"
        android:layout_width="80dp"
        android:layout_height="35dp"
        android:layout_marginStart="5dp"
        android:background="@color/light_yellow"
        android:ems="10"
        android:hint="@string/Number_of_Liter"
        android:inputType="text"
        android:paddingTop="18dp"
        android:textAlignment="textStart"
        android:textColorHint="@color/black"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvKmPerLiter4"
        app:layout_constraintStart_toEndOf="@+id/tvKmPerLiter4"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/etGasType"
        android:layout_width="130dp"
        android:layout_height="35dp"
        android:layout_marginStart="5dp"
        android:background="@color/light_yellow"
        android:ems="10"
        android:hint="@string/Gas_Type"
        android:inputType="text"
        android:paddingTop="12dp"
        android:textAlignment="textStart"
        android:textColorHint="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvKmPerLiter7"
        app:layout_constraintStart_toEndOf="@+id/tvKmPerLiter7" />

    <TextView
        android:id="@+id/tvKmPerLiter"
        android:layout_width="86dp"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/Kilometer_Per_Liter"
        android:text="Kilometer Per Liter"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvKmPerLiter2"
        android:layout_width="41dp"
        android:layout_height="16dp"
        android:layout_marginTop="32dp"
        android:hint="@string/Kilometer_Per_Liter"
        android:text="@string/Millage"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@+id/tvKmPerLiter"
        app:layout_constraintTop_toBottomOf="@+id/tvKmPerLiter" />

    <TextView
        android:id="@+id/tvKmPerLiter3"
        android:layout_width="38dp"
        android:layout_height="28dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:hint="@string/Kilometer_Per_Liter"
        android:text="@string/Price_Per_Liter"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="10sp"
        app:layout_constraintStart_toEndOf="@+id/etMillage"
        app:layout_constraintTop_toBottomOf="@+id/tvKmPerLiter" />

    <TextView
        android:id="@+id/tvKmPerLiter4"
        android:layout_width="38dp"
        android:layout_height="25dp"
        android:layout_marginStart="9dp"
        android:hint="@string/Kilometer_Per_Liter"
        android:text="@string/Price_Per_Liter"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="10sp"
        app:layout_constraintStart_toEndOf="@+id/etPricePerLiter"
        app:layout_constraintTop_toTopOf="@+id/tvKmPerLiter3" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginStart="4dp"
        android:background="@color/light_yellow"
        android:paddingTop="5dp"
        android:text="TextView"
        android:textAlignment="textStart"
        app:layout_constraintBottom_toBottomOf="@+id/tvKmPerLiter"
        app:layout_constraintStart_toEndOf="@+id/tvKmPerLiter" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginStart="5dp"
        android:background="@color/light_yellow"
        android:paddingTop="5dp"
        android:text="TextView"
        android:textAlignment="textStart"
        app:layout_constraintBottom_toBottomOf="@+id/tvTotalAmount"
        app:layout_constraintStart_toEndOf="@+id/tvTotalAmount" />

</androidx.constraintlayout.widget.ConstraintLayout>